# treadle

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  odm.toml
docs/: related-projects.md
docs/design/: index.md
docs/design/02-under-review/: 0002-treadle-v2-design-document.md
docs/design/05-active/: 0001-treadle-implementation-plan.md
docs/dev/: 0001-treadle-phase-1-implementation-plan.md  0002-treadle-phase-2-implementation-plan.md  0003-treadle-phase-3-implementation-plan.md  0004-treadle-phase-4-implementation-plan.md  0005-treadle-phase-5-implementation-plan.md  0006-treadle-phase-6-implementation-plan.md  0007-treadle-phase-7-implementation-plan.md  0008-treadle-phase-8-implementation-plan.md  0009-treadle-phase-9-implementation-plan.md  0010-treadle-phase-10-implementation-plan.md  0011-treadle-phase-11-implementation-plan.md
examples/: basic_pipeline.rs
src/: error.rs  event.rs  lib.rs  stage.rs  state_store.rs  status.rs  work_item.rs  workflow.rs
src/state_store/: memory.rs  mod.rs  sqlite.rs
tests/: integration.rs
